# pdem

./: .gitignore  CHANGES.rst  Dockerfile  MANIFEST.in  README.md  README.rst  build.sh  conftest.py  pyproject.toml  setup.py
bash/: die.sh  monitor.sh  test_script2.sh
deb/: pdem-server-gb3_0.0.12-1.dsc  pdem-server-gb3_0.0.12-1_all.deb  pdem-server-gb3_0.0.12-1_i386.changes  pdem-server_0.0.11-1_all.deb  pdem-server_0.0.12-1_all.deb  pdem_0.0.10-1_all.deb  pdem_0.0.8-1_all.deb
examples/: test_client.py
examples/bash/: test_script.sh  test_script2.sh
old/pdem-on-gambas/bash-commands/: kill.sh  monitor.sh  runprocess.sh
old/pdem-on-gambas/pdem-server/: .project  .settings  .startup  description.txt
old/pdem-on-gambas/pdem-server-gb3/: .project  .settings  pdem-server-gb3.gambas
old/pdem-on-gambas/pdem-server-gb3/.gambas/: MMAIN  NETOPERATOR  RPROCESSES
old/pdem-on-gambas/pdem-server-gb3/.src/: MMain.module~  rProcess.class~  rProcesses.class~
old/pdem-on-gambas/pdem-server/.gambas/: AGGREGATEPROCESS  (+3 more)
pdem/: pdem.py
pdem-server/: .project  .settings  .startup  CHANGELOG  MMain.module  NetOperator.module  pdem-server.gambas  pdem.gambas
pdem-server-gb3/: .settings  pdem-server-gb3.gambas
pdem-server-gb3/.gambas/: HTTPPROCESS  LOCALPROCESS  RPROCESSES
pdem-server-gb3/.hidden/: CHANGELOG
pdem-server-py3/: pdem-server.py
pdem-server/.gambas/: AGGREGATEPROCESS  CLSCOMMAND  HTTPPROCESS  LOCALPROCESS  MMAIN  NETOPERATOR  RPROCESS  RPROCESSES
pdem-server/.src/: NetOperator.module
php/: classPdem.php  composer.json
tests/: test_integration.py
(+2 files in other folders)
